tests/baselines/reference/overloadResolutionConstructors(strict=true).errors.txt
overloadResolutionConstructors.ts(2,13): error TS7008: Member 'n' implicitly has an 'any' type.
overloadResolutionConstructors.ts(4,12): error TS2564: Property 's' has no initializer and is not definitely assigned in the constructor.
overloadResolutionConstructors.ts(7,13): error TS7008: Member 'm' implicitly has an 'any' type.
overloadResolutionConstructors.ts(10,13): error TS7008: Member 'm' implicitly has an 'any' type.
overloadResolutionConstructors.ts(13,13): error TS7008: Member 'm' implicitly has an 'any' type.
overloadResolutionConstructors.ts(23,13): error TS2454: Variable 'fn1' is used before being assigned.
overloadResolutionConstructors.ts(23,17): error TS2769: No overload matches this call.
  Overload 1 of 2, '(s: string): string', gave the following error.
    Argument of type 'undefined' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(s: number): number', gave the following error.
    Argument of type 'undefined' is not assignable to parameter of type 'number'.
overloadResolutionConstructors.ts(24,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
overloadResolutionConstructors.ts(27,5): error TS2454: Variable 'fn1' is used before being assigned.
overloadResolutionConstructors.ts(27,9): error TS2769: No overload matches this call.
  Overload 1 of 2, '(s: string): string', gave the following error.
    Argument of type '{}' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(s: number): number', gave the following error.
    Argument of type '{}' is not assignable to parameter of type 'number'.
overloadResolutionConstructors.ts(36,13): error TS2454: Variable 'fn2' is used before being assigned.
overloadResolutionConstructors.ts(36,26): error TS2345: Argument of type 'undefined' is not assignable to parameter of type 'Date'.
overloadResolutionConstructors.ts(37,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'd' must be of type 'number', but here has type 'Date'.
overloadResolutionConstructors.ts(40,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
overloadResolutionConstructors.ts(40,13): error TS2454: Variable 'fn2' is used before being assigned.
overloadResolutionConstructors.ts(43,5): error TS2454: Variable 'fn2' is used before being assigned.
overloadResolutionConstructors.ts(43,15): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
overloadResolutionConstructors.ts(46,5): error TS2454: Variable 'fn2' is used before being assigned.
overloadResolutionConstructors.ts(56,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
overloadResolutionConstructors.ts(56,13): error TS2454: Variable 'fn3' is used before being assigned.
overloadResolutionConstructors.ts(57,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
overloadResolutionConstructors.ts(57,13): error TS2454: Variable 'fn3' is used before being assigned.
overloadResolutionConstructors.ts(58,13): error TS2454: Variable 'fn3' is used before being assigned.
overloadResolutionConstructors.ts(62,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
overloadResolutionConstructors.ts(62,13): error TS2454: Variable 'fn3' is used before being assigned.
overloadResolutionConstructors.ts(63,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
overloadResolutionConstructors.ts(63,13): error TS2454: Variable 'fn3' is used before being assigned.
overloadResolutionConstructors.ts(64,13): error TS2454: Variable 'fn3' is used before being assigned.
overloadResolutionConstructors.ts(67,5): error TS2454: Variable 'fn3' is used before being assigned.
overloadResolutionConstructors.ts(67,9): error TS2558: Expected 3 type arguments, but got 4.
overloadResolutionConstructors.ts(71,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
overloadResolutionConstructors.ts(72,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
overloadResolutionConstructors.ts(76,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(77,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(77,25): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
overloadResolutionConstructors.ts(78,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(78,25): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
overloadResolutionConstructors.ts(79,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(82,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(83,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(84,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(84,5): error TS2769: No overload matches this call.
  Overload 1 of 2, '(n: string, m: number): any', gave the following error.
    Argument of type 'number' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(n: 3, m: string): any', gave the following error.
    Argument of type 'undefined' is not assignable to parameter of type 'string'.
overloadResolutionConstructors.ts(85,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(85,5): error TS2769: No overload matches this call.
  Overload 1 of 2, '(n: "", m: number): any', gave the following error.
    Argument of type 'null' is not assignable to parameter of type 'number'.
  Overload 2 of 2, '(n: number, m: string): any', gave the following error.
    Argument of type 'string' is not assignable to parameter of type 'number'.
overloadResolutionConstructors.ts(88,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(88,9): error TS2344: Type 'boolean' does not satisfy the constraint 'number'.
overloadResolutionConstructors.ts(91,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(91,9): error TS2769: No overload matches this call.
  Overload 1 of 2, '(n: string, m: number): any', gave the following error.
    Argument of type 'boolean' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(n: number, m: string): any', gave the following error.
    Argument of type 'boolean' is not assignable to parameter of type 'number'.
overloadResolutionConstructors.ts(92,5): error TS2454: Variable 'fn4' is used before being assigned.
overloadResolutionConstructors.ts(92,9): error TS2769: No overload matches this call.
  Overload 1 of 2, '(n: string, m: number): any', gave the following error.
    Argument of type 'null' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(n: number, m: string): any', gave the following error.
    Argument of type 'null' is not assignable to parameter of type 'number'.
overloadResolutionConstructors.ts(100,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'n' must be of type 'number', but here has type 'string'.
overloadResolutionConstructors.ts(100,13): error TS2454: Variable 'fn5' is used before being assigned.
overloadResolutionConstructors.ts(100,26): error TS2339: Property 'toFixed' does not exist on type 'string'.
overloadResolutionConstructors.ts(101,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
overloadResolutionConstructors.ts(101,13): error TS2454: Variable 'fn5' is used before being assigned.


==== overloadResolutionConstructors.ts (55 errors) ====
    class SomeBase {
        private n;
                ~
!!! error TS7008: Member 'n' implicitly has an 'any' type.
    
        public s: string;
               ~
!!! error TS2564: Property 's' has no initializer and is not definitely assigned in the constructor.
    }
    class SomeDerived1 extends SomeBase {
        private m;
                ~
!!! error TS7008: Member 'm' implicitly has an 'any' type.
    }
    class SomeDerived2 extends SomeBase {
        private m;
                ~
!!! error TS7008: Member 'm' implicitly has an 'any' type.
    }
    class SomeDerived3 extends SomeBase {
        private m;
                ~
!!! error TS7008: Member 'm' implicitly has an 'any' type.
    }
    
    interface fn1 {
        new (s: string): string;
        new (s: number): number;
    }
    var fn1: fn1;
    
    // Ambiguous call picks the first overload in declaration order
    var s = new fn1(undefined);
                ~~~
!!! error TS2454: Variable 'fn1' is used before being assigned.
                    ~~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(s: string): string', gave the following error.
!!! error TS2769:     Argument of type 'undefined' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 2, '(s: number): number', gave the following error.
!!! error TS2769:     Argument of type 'undefined' is not assignable to parameter of type 'number'.
    var s: string;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
!!! related TS6203 overloadResolutionConstructors.ts:23:5: 's' was also declared here.
    
    // No candidate overloads found
    new fn1({}); // Error
        ~~~
!!! error TS2454: Variable 'fn1' is used before being assigned.
            ~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(s: string): string', gave the following error.
!!! error TS2769:     Argument of type '{}' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 2, '(s: number): number', gave the following error.
!!! error TS2769:     Argument of type '{}' is not assignable to parameter of type 'number'.
    
    // Generic and non - generic overload where generic overload is the only candidate when called with type arguments
    interface fn2 {
        new (s: string, n: number): number;
        new <T>(n: number, t: T): T;
    }
    var fn2: fn2;
    
    var d = new fn2<Date>(0, undefined);
                ~~~
!!! error TS2454: Variable 'fn2' is used before being assigned.
                             ~~~~~~~~~
!!! error TS2345: Argument of type 'undefined' is not assignable to parameter of type 'Date'.
    var d: Date;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'd' must be of type 'number', but here has type 'Date'.
!!! related TS6203 overloadResolutionConstructors.ts:36:5: 'd' was also declared here.
    
    // Generic and non - generic overload where generic overload is the only candidate when called without type arguments
    var s = new fn2(0, '');
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
!!! related TS6203 overloadResolutionConstructors.ts:23:5: 's' was also declared here.
                ~~~
!!! error TS2454: Variable 'fn2' is used before being assigned.
    
    // Generic and non - generic overload where non - generic overload is the only candidate when called with type arguments
    new fn2<Date>('', 0); // Error
        ~~~
!!! error TS2454: Variable 'fn2' is used before being assigned.
                  ~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    
    // Generic and non - generic overload where non - generic overload is the only candidate when called without type arguments
    new fn2('', 0); // OK
        ~~~
!!! error TS2454: Variable 'fn2' is used before being assigned.
    
    // Generic overloads with differing arity called without type arguments
    interface fn3 {
        new<T>(n: T): string;
        new<T, U>(s: string, t: T, u: U): U;
        new<T, U, V>(v: V, u: U, t: T): number;
    }
    var fn3: fn3;
    
    var s = new fn3(3);
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
!!! related TS6203 overloadResolutionConstructors.ts:23:5: 's' was also declared here.
                ~~~
!!! error TS2454: Variable 'fn3' is used before being assigned.
    var s = new fn3('', 3, '');
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
!!! related TS6203 overloadResolutionConstructors.ts:23:5: 's' was also declared here.
                ~~~
!!! error TS2454: Variable 'fn3' is used before being assigned.
    var n = new fn3(5, 5, 5);
                ~~~
!!! error TS2454: Variable 'fn3' is used before being assigned.
    var n: number;
    
    // Generic overloads with differing arity called with type arguments matching each overload type parameter count
    var s = new fn3<number>(4);
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
!!! related TS6203 overloadResolutionConstructors.ts:23:5: 's' was also declared here.
                ~~~
!!! error TS2454: Variable 'fn3' is used before being assigned.
    var s = new fn3<string, string>('', '', '');
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
!!! related TS6203 overloadResolutionConstructors.ts:23:5: 's' was also declared here.
                ~~~
!!! error TS2454: Variable 'fn3' is used before being assigned.
    var n = new fn3<number, string, string>('', '', 3);
                ~~~
!!! error TS2454: Variable 'fn3' is used before being assigned.
    
    // Generic overloads with differing arity called with type argument count that doesn't match any overload
    new fn3<number, number, number, number>(); // Error
        ~~~
!!! error TS2454: Variable 'fn3' is used before being assigned.
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 3 type arguments, but got 4.
    
    // Generic overloads with constraints called with type arguments that satisfy the constraints
    interface fn4 {
        new<T extends string, U extends number>(n: T, m: U);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
        new<T extends number, U extends string>(n: T, m: U);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
    }
    var fn4: fn4;
    
    new fn4<string, number>('', 3);
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
    new fn4<string, number>(3, ''); // Error
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
                            ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    new fn4<number, string>('', 3); // Error
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
                            ~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    new fn4<number, string>(3, ''); 
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
    
    // Generic overloads with constraints called without type arguments but with types that satisfy the constraints
    new fn4('', 3);
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
    new fn4(3, '');
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
    new fn4(3, undefined);
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
        ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(n: string, m: number): any', gave the following error.
!!! error TS2769:     Argument of type 'number' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 2, '(n: 3, m: string): any', gave the following error.
!!! error TS2769:     Argument of type 'undefined' is not assignable to parameter of type 'string'.
    new fn4('', null);
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
        ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(n: "", m: number): any', gave the following error.
!!! error TS2769:     Argument of type 'null' is not assignable to parameter of type 'number'.
!!! error TS2769:   Overload 2 of 2, '(n: number, m: string): any', gave the following error.
!!! error TS2769:     Argument of type 'string' is not assignable to parameter of type 'number'.
    
    // Generic overloads with constraints called with type arguments that do not satisfy the constraints
    new fn4<boolean, Date>(null, null); // Error
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
            ~~~~~~~
!!! error TS2344: Type 'boolean' does not satisfy the constraint 'number'.
    
    // Generic overloads with constraints called without type arguments but with types that do not satisfy the constraints
    new fn4(true, null); // Error
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
            ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(n: string, m: number): any', gave the following error.
!!! error TS2769:     Argument of type 'boolean' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 2, '(n: number, m: string): any', gave the following error.
!!! error TS2769:     Argument of type 'boolean' is not assignable to parameter of type 'number'.
    new fn4(null, true); // Error
        ~~~
!!! error TS2454: Variable 'fn4' is used before being assigned.
            ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(n: string, m: number): any', gave the following error.
!!! error TS2769:     Argument of type 'null' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 2, '(n: number, m: string): any', gave the following error.
!!! error TS2769:     Argument of type 'null' is not assignable to parameter of type 'number'.
    
    // Non - generic overloads where contextual typing of function arguments has errors
    interface fn5 {
        new(f: (n: string) => void): string;
        new(f: (n: number) => void): number;
    }
    var fn5: fn5;
    var n = new fn5((n) => n.toFixed());
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'n' must be of type 'number', but here has type 'string'.
!!! related TS6203 overloadResolutionConstructors.ts:58:5: 'n' was also declared here.
                ~~~
!!! error TS2454: Variable 'fn5' is used before being assigned.
                             ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type 'string'.
    var s = new fn5((n) => n.substr(0));
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'never', but here has type 'string'.
!!! related TS6203 overloadResolutionConstructors.ts:23:5: 's' was also declared here.
                ~~~
!!! error TS2454: Variable 'fn5' is used before being assigned.
    